--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,2 +1,22 @@
-<p>Hello World!</p>
-<p>These is Umesh Bingi</p>
+<!-- paragraph Element -->
+<p>Hello World</p>
+
+<!-- Heading Element -->
+<h1>Hello</h1>
+<h2>Hello</h2>
+<h3>Hello</h3>
+<h4>Hello</h4>
+<h5>Hello</h5>
+<h6>Hello</h6>
+<h7>Hello</h7>
+
+<!-- Practice Qn1 -->
+<h1>Avengers</h1>
+<h2>Iron Man</h2>
+<p>Also goes by the name <b>Tony Stark</b></p>
+
+<h2>Captain Amgerica</h2>
+<p>Also goes by the name <b>Steve Rogers</b></p>
+
+<h2>Hulk</h2>
+<p>Also goes by the name <b>Bruce Banner</b></p>
