--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,22 +1,19 @@
-<!-- paragraph Element -->
-<p>Hello World</p>
+<!-- BoilerPlate code -->
+<!DOCTYPE html>
+<!-- Represents the version of HTML-->
+<html lang="en">
+  <!-- Root Tag-->
+  <head>
+    <!-- Meta data -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Practice</title>
+    <!-- Web Page title -->
+  </head>
+  <body>
+    <!-- Content Which Displayed on the TV shows  -->
+    <h1>Hello World</h1>
+  </body>
+</html>
 
-<!-- Heading Element -->
-<h1>Hello</h1>
-<h2>Hello</h2>
-<h3>Hello</h3>
-<h4>Hello</h4>
-<h5>Hello</h5>
-<h6>Hello</h6>
-<h7>Hello</h7>
-
-<!-- Practice Qn1 -->
-<h1>Avengers</h1>
-<h2>Iron Man</h2>
-<p>Also goes by the name <b>Tony Stark</b></p>
-
-<h2>Captain Amgerica</h2>
-<p>Also goes by the name <b>Steve Rogers</b></p>
-
-<h2>Hulk</h2>
-<p>Also goes by the name <b>Bruce Banner</b></p>
+<!-- The Shortcut to generate boilerplate code is shift + ! -->
