--- a/HTML/table.html
+++ b/HTML/table.html
@@ -6,7 +6,7 @@
     <title>Tables</title>
   </head>
   <body>
-    <h1>Table</h1>
+    <!-- <h1>Table</h1>
     <table border="black">
       <caption>
         Food Menu
@@ -29,6 +29,39 @@
         <tr>
           <td>Banana</td>
           <td>60</td>
+        </tr>
+      </tbody>
+    </table> -->
+
+    <table border="black">
+      <caption>
+        Food menu
+      </caption>
+      <thead>
+        <tr>
+          <th rowspan="2" colspan="1">Item</th>
+          <th rowspan="1" colspan="2">Price</th>
+        </tr>
+        <tr>
+          <th>INR</th>
+          <th>USD</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Frooti</td>
+          <td>10</td>
+          <td>0.14</td>
+        </tr>
+        <tr>
+          <td>Samosa</td>
+          <td>12</td>
+          <td>0.17</td>
+        </tr>
+        <tr>
+          <td>Chips</td>
+          <td>20</td>
+          <td>0.28</td>
         </tr>
       </tbody>
     </table>
