--- a/HTML/table.html
+++ b/HTML/table.html
@@ -33,7 +33,8 @@
       </tbody>
     </table> -->
 
-    <table border="black">
+    <!-- Tables with Rowspan and Colspan -->
+    <!-- <table border="black">
       <caption>
         Food menu
       </caption>
@@ -62,6 +63,38 @@
           <td>Chips</td>
           <td>20</td>
           <td>0.28</td>
+        </tr>
+      </tbody>
+    </table> -->
+
+    <!-- Practice Qn Table -->
+    <table border="black">
+      <caption>
+        A test table with merged cells
+      </caption>
+      <thead>
+        <tr>
+          <th rowspan="2"></th>
+          <th colspan="2">Average</th>
+          <th rowspan="2">Red eyes</th>
+        </tr>
+        <tr>
+          <th>Height</th>
+          <th>Weight</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Males</td>
+          <td>1.9</td>
+          <td>0.03</td>
+          <td>40%</td>
+        </tr>
+        <tr>
+          <td>Females</td>
+          <td>1.7</td>
+          <td>0.002</td>
+          <td>43%</td>
         </tr>
       </tbody>
     </table>
