name attribute in forms

--- a/HTML/forms.html
+++ b/HTML/forms.html
@@ -9,19 +9,23 @@
     <form action="/action">
       <div>
         <label for="username">Name:</label>
-        <input type="text" placeholder="Username" id="username" />
+        <input
+          type="text"
+          placeholder="Username"
+          id="username"
+          name="username"
+        />
       </div>
       <div>
         <label for="password">Password:</label>
-        <input type="password" placeholder="Password" id="password" />
+        <input
+          type="password"
+          placeholder="Password"
+          id="password"
+          name="password"
+        />
       </div>
-      <!-- Different types of Buttons -->
-      <button>Type1</button>
-      <button type="button">Type2</button>
-      <button type="Reset">Type3</button>
-      <!-- Buttons with input elements -->
-      <input type="submit" />
-      <input type="button" value="submit" />
+      <button>Submit</button>
     </form>
   </body>
 </html>
